# data-mover-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PLAN-issue-21-pr-a.md  README.md  wrapper.h
.claude/: settings.json
.claude/agents/: architect.md  backend-specialist.md  dispatch-checker.md  filter-expert.md  reviewer.md
.claude/commands/: evolve.md  route.md  verify.md
.claude/docs/: README.md  architecture.md  claude-onboarding.md  codebase.md  conventions.md  error-taxonomy.md  filter-dsl.md  storage-cifs.md  storage-enum-dispatch.md  storage-local.md  storage-nfs.md  storage-s3.md  walk-scheduler.md
.claude/memory/: README.md  corrections.jsonl  evolution-log.md  learned-rules.md
.claude/plans/: issue-53-pr-a.md  issue-58.md
.claude/rules/: filter-dsl-rules.md  rust-patterns.md  storage-driver-conventions.md  testing.md
.claude/skills/_shared/: assertions.py  env_loader.py  protocol_constants.py  url_builder.py
.claude/skills/e2e-cifs/: .env.example  SKILL.md
.claude/skills/e2e-cifs/scripts/: run.py
.claude/skills/e2e-local/: .env.example  SKILL.md
.claude/skills/e2e-local/scripts/: run.py
.claude/skills/e2e-nfs/: .env.example  SKILL.md
.claude/skills/e2e-nfs/scripts/: run.py
.claude/skills/e2e-s3/: .env.example  SKILL.md
.claude/skills/e2e-s3/scripts/: run.py
.claude/skills/harness-run/: .env.example  SKILL.md
.claude/skills/harness-run/scripts/: matrix.yaml  report.py  runner.py
.claude/skills/op-cancel/: .env.example  SKILL.md
.claude/skills/op-cancel/scripts/: run.py
.claude/skills/op-filter-dsl/: .env.example  SKILL.md
.claude/skills/op-filter-dsl/scripts/: run.py
.claude/skills/quality-clippy/: SKILL.md
.claude/skills/quality-clippy/scripts/: run.py
.claude/skills/quality-coverage/: SKILL.md
.claude/skills/quality-coverage/scripts/: run.py
.claude/skills/quality-dispatch-coverage/: SKILL.md  baseline_holes.json
.claude/skills/quality-dispatch-coverage/scripts/: run.py
.claude/skills/quality-large-file-audit/: SKILL.md
.github/workflows/: ci.yml  claude-review.yml  claude.yml
examples/: cifs_copy.rs  cifs_walkdir.rs  local_opt_dir.rs  local_walkdir.rs  local_walkdir_2.rs  nfs_export.rs  nfs_opt_dir.rs  nfs_walkdir.rs  s3_walkdir.rs
src/: acl.rs  async_receiver.rs  checksum.rs  cifs.rs  dir_tree.rs  error.rs  filter.rs  lib.rs  local.rs  nfs.rs  qos.rs  s3.rs  storage_enum.rs  tar_pack.rs  time_util.rs  url_redact.rs  walk_scheduler.rs  write_pipeline.rs
tests/: test_copy_file_cancel.rs  test_copy_file_resume.rs  test_copy_size_guard.rs  test_local_overwrite_truncate.rs  test_local_write_flush.rs  test_storage_type.rs  test_write_chunk_stream.rs
(+1 files in other folders)
